# AI

./: .dockerignore  .env  .env.example  Dockerfile  README.md  add_classid_column.py  check_db_v2.py  check_ids.py  check_qb.py  check_rds_data.py  db_tables.txt  ensure_student.py  export_db.py  inspect_db_schema.py  main.py  migrate_roadmap.py  note.md  pyproject.toml  research_extra_tables.py  schema_info.txt
app/database/: README.md  db_doc.sql  db_quiz.sql  db_roadmap.sql  db_student.sql  test.sql
app/extract_doc/: extract_document.py  insert_db.py  output_doc.json
app/extract_quiz/: extract_question.py  insert_db.py  output_questions.json
app/models/: schema_question_bank.py
app/quiz_gen/: README.md  quiz_generator.py
app/roadmap_gen/: note.md  openai_service.py  roadmap_generator.py
context/: check_db.py  context.txt  db_details.json  note.md
src/api/: books.py  chat.py  classrooms.py  documents.py  roadmap.py  router.py  subjects.py  upload.py
src/assignment_gen/: assignment_generator.py  router.py  schemas.py  simulate_student.py
src/core/: config.py  security.py
src/database/: db_assignment.sql  db_doc.sql  db_keyword.sql  db_quiz.sql  db_roadmap.sql  test.sql
src/extract_doc/: extract_document.py  insert_db.py  output_doc.json
src/extract_quiz/: extract_question.py  insert_db.py  output_questions.json
src/models/: schema.py  schema_question_bank.py
src/quiz_gen/: quiz_generator.py
src/roadmap_gen/: data_fetcher.py  db_connector.py  db_saver.py  embedding_linker.py  openai_service.py  prompt_builder.py  roadmap_generator.py  (+1 more)
(+3 files in other folders)
