[project]
name = "raw-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "jupyter>=1.1.1",
    "llama-cloud>=0.1.46",
    "llama-cloud-services>=0.6.94",
    "openai>=2.26.0",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pymupdf>=1.27.1",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
]
